--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack -d && webpack-dev-server --content-base src/ --inline --hot"
+    "start": "webpack -d && webpack-dev-server --content-base src/ --inline --hot",
+    "deploy": "git checkout gh-pages && git merge master && git push origin gh-pages"
   },
   "author": "",
   "license": "ISC",
