--- a/package.json
+++ b/package.json
@@ -4,34 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack -d && webpack-dev-server --content-base src/ --inline --hot",
+    "start": "webpack serve --content-base src",
     "deploy": "cp src/app.css dist/ && cp src/index.html dist/ && git add . && git commit -m 'Deploy' && git subtree push --prefix dist origin gh-pages"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.15.3",
-    "nraw": "^0.2.5",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "redwrap": "0.0.4"
+    "@babel/preset-env": "^7.14.4",
+    "axios": "^0.21.1",
+    "babel-loader": "^8.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-transform-async-to-generator": "^6.16.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2016": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "eslint": "^3.12.2",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "json-loader": "^0.5.4",
-    "react-router": "^3.0.0",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "@babel/core": "^7.14.3",
+    "@babel/eslint-parser": "^7.14.4",
+    "@babel/plugin-transform-async-to-generator": "^7.13.0",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-react": "^7.13.13",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
