--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --content-base src",
-    "deploy": "cp src/app.css dist/ && cp src/index.html dist/ && git add . && git commit -m 'Deploy' && git subtree push --prefix dist origin gh-pages"
+    "start": "nodemon src/server/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +12,13 @@
     "@babel/preset-env": "^7.14.4",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "webpack": "^5.38.1",
+    "webpack-dev-middleware": "^3.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -29,7 +32,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
   }
