--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.14.4",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
