--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-  "presets": ["@babel/preset-react", "@babel/preset-env"],
-  "plugins": ["@babel/plugin-transform-async-to-generator"]
+  "presets": ["@babel/preset-react", "@babel/preset-env", "@babel/typescript"]
 }
