--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/server/index.js"
+    "start": "nodemon src/server/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -24,15 +24,21 @@
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/eslint-parser": "^7.14.4",
-    "@babel/plugin-transform-async-to-generator": "^7.13.0",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.7.7",
+    "@types/node": "^12.12.5",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.3",
+    "@types/react-router-dom": "^5.1.7",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "ts-node": "^10.0.0",
+    "typescript": "^3.7.4",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
   }
