--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-env": "^7.14.4",
+    "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "cors": "^2.8.5",
@@ -17,7 +18,9 @@
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "reselect": "^4.0.0",
     "webpack": "^5.38.1",
     "webpack-dev-middleware": "^3.7.3"
   },
