--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A small UI client to browse images posted on any subreddit",
   "scripts": {
-    "start": "nodemon src/server/index.ts",
+    "start": "ts-node src/server/index.ts",
     "deploy": "git push heroku master"
   },
   "engines": {
@@ -25,7 +25,8 @@
     "react-router-dom": "^5.2.0",
     "reselect": "^4.0.0",
     "webpack": "^5.38.1",
-    "webpack-dev-middleware": "^3.7.3"
+    "webpack-dev-middleware": "^3.7.3",
+    "ts-node": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -43,7 +44,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "ts-node": "^10.0.0",
     "typescript": "^3.7.4",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
