--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "reselect": "^4.0.0",
     "webpack": "^5.38.1",
     "webpack-dev-middleware": "^3.7.3",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "typescript": "^3.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -44,7 +45,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^3.7.4",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
   }
