--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "webpack": "^5.38.1",
     "webpack-dev-middleware": "^3.7.3",
     "ts-node": "^10.0.0",
-    "typescript": "^3.7.4"
-  },
-  "devDependencies": {
+    "typescript": "^3.7.4",
     "@babel/core": "^7.14.3",
     "@babel/eslint-parser": "^7.14.4",
     "@babel/polyfill": "^7.12.1",
@@ -38,7 +36,9 @@
     "@types/node": "^12.12.5",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react-router-dom": "^5.1.7"
+  },
+  "devDependencies": {
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
